Version 1.13.10+dev:
 * Language and i18n:
   * Updated translations: Chinese (Simplified)
 * User Interface:
   * Removed broken Unit Box and Widescreen themes.
 * WML Engine:
   * File paths are now case sensitive even on Windows.

Version 1.13.10:
 * Add-ons client:
   * A list of illegal filenames is displayed if any are found by the server
     when uploading.
 * Add-ons server:
   * A list of illegal filenames is sent to the client if any are found during
     the upload validation process. Only clients supporting this new
     functionality can display the list.
   * Fix an issue where the implementation of the hashing function used for
     add-on passphrases was changed since 1.13.8, breaking existing hashes
     (bug #2068).
 * Campaigns:
   * Delfador's Memoirs:
     * Clarified and fixed objectives in many places.
     * Improved appearance and flow of dialog in several places.
     * Some minor gameplay changes to improve the story.
     * Delfador now progresses properly from Mage Journeyman to Elder Mage.
     * Fixed some other bugs.
     * S07, A Night in the Swamp has been rebalanced on easy & hard.
     * S09, Houses of the Dead, has been rebalanced.
     * S18, The Portal of Doom, has been rebalanced.
     * Iliah-Malal is now an Ancient Lich in S18 & 19.
 * Language and i18n:
   * Updated translations: British English
 * Lua API:
   * Upgrade to Lua 5.3.4.
 * Multiplayer:
   * Fixed a bug where the client would return to titlescreen on receiving a
     redirect message from the server, which made connecting to the official
     server via the "connect to official server" button impossible.
 * Miscellaneous and Bug Fixes:
   * Updated our included Spirit Po version from 1.0.1 to 1.1.2.
   * Fix idle AI being replaced by default AI under certain circumstances on
     loading of mid-scenario saves (bug #1955)
   * Fix rare AI crashes in the move-to-any-target candidate action and the
     Fast Micro AI