@@ -392,7 +392,9 @@ namespace
 	{
 		utils::string_map symbols;
 		symbols["player"] = resources::controller->current_team().current_player();
-		resources::screen->announce(vgettext(message, symbols), font::NORMAL_COLOR, 1000);
+		display::announce_options announce_options;
+		announce_options.lifetime = 1000;
+		resources::screen->announce(vgettext(message, symbols), font::NORMAL_COLOR, announce_options);
 	}
 }
 SYNCED_COMMAND_HANDLER_FUNCTION(debug_unit, child,  use_undo, /*show*/, /*error_handler*/)
